[package]
authors = ["Yuriy Voshchepynets <yuriy.voshchepynets@ckreator.com>"]
autotests = true
categories = ["web-programming::http-client", "wasm"]
description = "higher level HTTP client library for the lunatic runtime"
documentation = "https://docs.rs/nightfly"
edition = "2018"
keywords = ["http", "request", "client"]
license = "MIT/Apache-2.0"
name = "nightfly"
readme = "README.md"
repository = "https://github.com/SquattingSocrates/nightfly"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = [
  "json", # "multipart",
]

[features]
cookies = ["cookie_crate", "cookie_store", "proc-macro-hack"]
default = []

# multipart = ["mime_guess"]

[dependencies]
base64 = "0.13"
bytes = "1.0"
encoding_rs = "0.8.31"
http = "0.2"
http-body = "0.4.5"
httparse = "1.7.1"
ipnet = "2.5.0"
lunatic = {git = "https://github.com/lunatic-solutions/lunatic-rs"}
lunatic-log = "0.2"
mime = "0.3.16"
percent-encoding = "2.2.0"
serde = "1.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0"
tower-service = "0.3"
url = {version = "2.2", features = ["serde"]}

# Optional deps...

## json
serde_json = "1.0"
## multipart
mime_guess = {version = "2.0", default-features = false, optional = true}
# Optional deps...
brotli = {version = "3.3.4"}

## cookies
cookie_crate = {version = "0.15", package = "cookie", optional = true}
cookie_store = {version = "0.15", optional = true}
proc-macro-hack = {version = "0.5.19", optional = true}

## compression
flate2 = {version = "^1.0.24"}

## trust-dns
trust-dns-resolver = {version = "0.22", optional = true}

[dev-dependencies]
criterion = {git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false}
submillisecond = {git = "https://github.com/lunatic-solutions/submillisecond", features = [
  "cookies",
  "json",
  "logging",
  "query",
  "websocket",
]}# for examples

[[example]]
name = "blocking"
path = "examples/blocking.rs"

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
# required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
# required-features = ["json"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[test]]
name = "blocking"
path = "tests/blocking.rs"

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"

[[test]]
name = "brotli"
path = "tests/brotli.rs"

[[test]]
name = "deflate"
path = "tests/deflate.rs"

[[test]]
name = "chunked"
path = "tests/chunked.rs"

# [[test]]
# name = "multipart"
# path = "tests/multipart.rs"
# required-features = ["multipart"]
